# ros_lab

./: .gitignore
src/rst_surros_packages/: .gitlab-ci.yml  .gitmodules  README.md
src/rst_surros_packages/robot_harware_interface/hardware_interface/dynamixel_hardware/src/: dynamixel_hardware.cpp
src/rst_surros_packages/robot_harware_interface/hardware_interface/open_manipulator_x_description/controllers/: controllers.yaml
src/rst_surros_packages/robot_harware_interface/hardware_interface/open_manipulator_x_description/launch/: display.launch.py
src/rst_surros_packages/robot_harware_interface/hardware_interface/open_manipulator_x_description/urdf/: open_manipulator_x.ros2_control.xacro
src/rst_surros_packages/surros_config/: CMakeLists.txt  package.xml
src/rst_surros_packages/surros_config/config/: controllers.yaml  surros_arm.yaml  surros_rviz.rviz  test_goal_publishers_config.yaml
src/rst_surros_packages/surros_description/: CMakeLists.txt  package.xml
src/rst_surros_packages/surros_description/cad/: base_link.stp  follower_arm.urdf  gripper_move.stp  link_1.stp  link_2.stp  link_3.stp  link_4.stp  link_5.stp
src/rst_surros_packages/surros_description/doc/: forward_kinematics.pptx  inverse_kinematics.pptx
src/rst_surros_packages/surros_description/doc/testing/matlab/: forward_kinematics.mlx  forward_kinematics_new.mlx  generate_desired_pose.m  getDHmatrix.m  ik_geometric.m  inverse_kinematics.mlx  main.mlx  plotCoordinateSystems.m
src/rst_surros_packages/surros_description/mesh/: base_link.stl  gripper_move.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl
src/rst_surros_packages/surros_description/urdf/: common.xacro  follower_arm_macro.ros2_control.xacro  follower_arm_macro.xacro  robot.urdf.xacro
src/rst_surros_packages/surros_launch/: CMakeLists.txt  package.xml
src/rst_surros_packages/surros_launch/launch/: start_real_robot.launch.py  start_sim_robot.launch.py  start_sim_robot_manual.launch.py  start_surros_lib_main.launch.py
src/rst_surros_packages/surros_launch/launch/old/: surros.launch.py  surros_hardware.launch.py  surros_sim.launch.py  test_surros_lib.launch.py  test_urdf.launch.py
src/rst_surros_packages/surros_launch/launch/old/temp/: start_robot_manual_control.launch.py  start_robot_with_controllers.launch.py  start_rviz.launch.py  test_joint_trajectory_controller.launch.py
src/rst_surros_packages/surros_lib/: CMakeLists.txt  Doxyfile  package.xml
src/rst_surros_packages/surros_lib/docs/: .gitignore
src/rst_surros_packages/surros_lib/env-hooks/: surros_lib_library_path.sh
src/rst_surros_packages/surros_lib/include/surros_lib/: kinematics.h  misc.h  surros_interface.h  types.h
src/rst_surros_packages/surros_lib/src/: kinematics.cpp  main.cpp  surros_interface.cpp  temp.cpp
src/rst_surros_packages/surros_msgs/: CMakeLists.txt  package.xml
src/rst_surros_packages/surros_msgs/msg/: SurrosDiagnostic.msg
src/surros1_template/: CMakeLists.txt
src/wp1/: CMakeLists.txt  package.xml
src/wp1/launch/: frames_tf.launch.py
src/wp1/src/: frames_eigen.cpp  frames_tf.cpp
src/wp2/: CMakeLists.txt  package.xml
src/wp2/launch/: launch_exercise1.launch.py  launch_exercise2.launch.py  launch_exercise3.launch.py  launch_exercise4.launch.py  launch_robot_control.launch.py
src/wp2/src/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
src/wp3/: CMakeLists.txt  package.xml
src/wp3/launch/: launch_exercie1.launch.py  launch_exercie2.launch.py  launch_exercise2.launch.py  launch_house.launch.py  launch_p2p.launch.py  launch_robot_control.launch.py
src/wp3/src/: exercise1.cpp  exercise2.cpp  house.cpp  p2p.cpp  point_to_point.cpp  robot_control.cpp
src/wp4/: CMakeLists.txt  package.xml
src/wp4/launch/: launch_exercise1.launch.py  launch_exercise2.launch.py  launch_robot_control.launch.py  launch_stacking.launch.py
src/wp4/src/: exercise1.cpp  exercise2.cpp  robot_control.cpp  stacking.cpp
wp1/launch/: frames_eigen.launch.py
wp1/src/: frames_eigen.cpp
wp2/launch/: launch_robot_control.launch.py
wp2/src/: robot_control.cpp
