<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workpackage_1</name>
  <version>0.0.0</version>
  <description>Visualization of spatial transformations with Eigen and tf2</description>
  <maintainer email="timon.te-kempel@tu-dortmund.de">timon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
